# wc-tool

./: Readme.md  pyproject.toml  sratchpad.txt
wc_tool/: cli.py  command.py  main.py  utils.py
